Revamp documentation for Rocka, simplify getting started

--- a/index.mdx
+++ b/index.mdx
@@ -1,97 +1,20 @@
 ---
-title: "Introduction"
-description: "Welcome to the new home for your documentation"
+title: "Get started with Rocka"
+description: "Set up your Rocka integration and start accepting payments"
 ---
 
-## Setting up
+## Create your account
 
-Get your documentation site up and running in minutes.
+To set up your integration and start accepting payments, complete your onboarding in [Rocka Hub](https://hub.rocka.live). If you have any questions, please reach out to your personal manager.
 
-<Card
-  title="Start here"
-  icon="rocket"
-  href="/quickstart"
-  horizontal
->
-  Follow our three step quickstart guide.
-</Card>
+You can start working on your integration while we're reviewing the documents.
 
-## Make it yours
+## Start accepting payments
 
-Design a docs site that looks great and empowers your users.
+To start accepting payments, get your personal API keys. You can find them in the **Integration** tab on the left-hand sidebar in your [Rocka Hub](https://hub.rocka.live/). You'll need your keys to make every call to the API.
 
-<Columns cols={2}>
-  <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
-  >
-    Edit your docs locally and preview them in real time.
-  </Card>
-  <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
-  >
-    Customize the design and colors of your site to match your brand.
-  </Card>
-    <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organize your docs to help users find what they need and succeed with your product.
-  </Card>
-  <Card
-    title="API documentation"
-    icon="terminal"
-    href="/api-reference/introduction"
-  >
-    Auto-generate API documentation from OpenAPI specifications.
-  </Card>
-</Columns>
+To learn more about the Rocka API, see our [API reference](https://docs.rocka.live/reference/introduction). It'll guide you through the most basic use cases, including generating customised payment buttons and creating payments.
 
-## Create beautiful pages
-
-Everything you need to create world-class documentation.
-
-<Columns cols={2}>
-  <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
-  >
-    Use MDX to style your docs pages.
-  </Card>
-  <Card
-    title="Code samples"
-    icon="code"
-    href="/essentials/code"
-  >
-    Add sample code to demonstrate how to use your product.
-  </Card>
-  <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
-  >
-    Display images and other media.
-  </Card>
-  <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
-  >
-    Write once and reuse across your docs.
-  </Card>
-</Columns>
-
-## Need inspiration?
-
-<Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
->
-  Browse our showcase of exceptional documentation sites.
-</Card>
+<Tip>
+  Before you go live, make sure your integration works as expected. For more details, see Test your integration.
+</Tip>
