Remove image and external link from getting started guides

--- a/getting-started/test-your-integration.mdx
+++ b/getting-started/test-your-integration.mdx
@@ -10,12 +10,11 @@ Before you start accepting payments, test your Rocka integration to make sure ev
 
 1. Go to your [Rocka Hub](https://hub.rocka.live/integration) > **Integration**. You'll find your test API key under **Test credentials**.
 
-<Image align="center" width="500px" src="https://files.readme.io/e57058e65cfe61693dbba8233f94bc706a251c97a26ae33bb011eb5f063aa1dc-Screenshot_2026-02-05_at_21.59.13.png" />
 
-2. To verify your site is connected to Rocka, make a test API call with your sandbox key. For example, you can try the [Get the list of top banks](https://docs.noda.live/reference/get-the-list-of-top-banks) endpoint. Make sure you select **Sandbox** in the server list.
+2. To verify your site is connected to Rocka, make a test API call with your sandbox key. For example, you can try the Get the list of top banks endpoint. Make sure you select **Sandbox** in the server list.
 
 ### Step 2. Create your first payment
 
-Try creating your first payment with your test API key. For more details, see [Create a payment](https://docs.noda.live/reference/create-a-payment). Once your test payments go through, you'll see them in the **Transactions** section in your Rocka Hub.
+Try creating your first payment with your test API key. For more details, see Create a payment. Once your test payments go through, you'll see them in the **Transactions** section in your Rocka Hub.
 
 After you complete your onboarding in Rocka Hub, your live keys will become active.
