--- a/getting-started/introduction.mdx
+++ b/getting-started/introduction.mdx
@@ -13,7 +13,7 @@ You can start working on your integration while we're reviewing the documents.
 
 To start accepting payments, get your personal API keys. You can find them in the **Integration** tab on the left-hand sidebar in your [Rocka Hub](https://hub.rocka.live/). You'll need your keys to make every call to the API.
 
-To learn more about the Rocka API, see our [API reference](https://docs.rocka.live/reference/introduction). It'll guide you through the most basic use cases, including generating customised payment buttons and creating payments.
+To learn more about the Rocka API, see our API reference. It'll guide you through the most basic use cases, including generating customised payment buttons and creating payments.
 
 <Tip>
   Before you go live, make sure your integration works as expected. For more details, see Test your integration.
