Add platform cards to about plugins page

--- a/plugins/about-plugins.mdx
+++ b/plugins/about-plugins.mdx
@@ -5,3 +5,21 @@ title: "About plugins"
 To make your integration easier, Rocka offers custom plugins for several ecommerce platforms.
 
 Select your platform:
+
+<Columns cols={2}>
+  <Card title="WooCommerce" icon="sparkles">
+    .
+  </Card>
+  <Card title="OpenCart" icon="sparkles">
+    .
+  </Card>
+  <Card title="Magento" icon="sparkles">
+    .
+  </Card>
+  <Card title="PrestaShop" icon="sparkles">
+    .
+  </Card>
+  <Card title="BigCommerce" icon="sparkles">
+    .
+  </Card>
+</Columns>
