Update WooCommerce plugin name to Rocka

--- a/plugins/woocommerce.mdx
+++ b/plugins/woocommerce.mdx
@@ -8,19 +8,19 @@ title: 'WooCommerce'
 * You must have admin privileges on your WordPress site.
 * PHP version **7.4** or greater (you can check your version in **Tools** > **Site Health** > **Info** > **Server**)
 * WordPress version **6.3** or greater (you can check your version in **Tools** > **Site Health** > **Info** > **WordPress**)
-* WooCommerce version **9.3.0** or greater. For older versions of WooCommerce, the Noda plugin will be deactivated automatically.
+* WooCommerce version **9.3.0** or greater. For older versions of WooCommerce, the Rocka plugin will be deactivated automatically.
 
 ## Step 1. Set up the plugin
 
 <Accordion title="1.1. Download and install the plugin">
-  <a href="https://pluginrepositorynew.blob.core.windows.net/plugin-repository/latest/woo-noda-payments.zip" class="download-button"><i class="fa-solid fa-download" /> Download plugin</a>
+  <a href="https://pluginrepositorynew.blob.core.windows.net/plugin-repository/latest/woo-rocka-payments.zip" class="download-button"><i class="fa-solid fa-download" /> Download plugin</a>
 
   <br />
 
   1. Download the plugin archive file.
   2. In your WordPress admin panel, click **Plugins** on the left-hand sidebar.
   3. Click **Add plugin** > **Upload plugin**.
-  4. Click **Choose file** and select `woo-noda-payments.zip` on your computer.
+  4. Click **Choose file** and select `woo-rocka-payments.zip` on your computer.
   5. Click **Install now**.
 </Accordion>
 
@@ -54,7 +54,7 @@ In **Visual Settings**, you can customise the appearance of your payment buttons
 When you install the plugin, the fields API Key, Signature and Shop ID are auto-filled to help you test the plugin. To go live:
 
 1. Uncheck the **Test mode** box.
-2. Replace API Key, Signature Key and Shop ID with your credentials, found in your Noda Hub.
+2. Replace API Key, Signature Key and Shop ID with your credentials, found in your Rocka Hub.
 
 ### Add customised payment buttons
 
