Update payment status and export payment docs

--- a/open-banking/about-payment-statuses.mdx
+++ b/open-banking/about-payment-statuses.mdx
@@ -7,7 +7,7 @@ Every payment goes through three temporary statuses (`New`, `Processing` and `Aw
 To check the status of a payment, you can:
 
 1. Look the payment up in your [Rocka Hub](https://hub.rocka.live/)
-2. Use the [Check payment status](https://docs.noda.live/reference/check-payment-status#/) API endpoint
+2. Use the [Check payment status](https://docs.rocka.live/reference/check-payment-status#/) API endpoint
 3. Retrieve it through a webhook.
 
 ## Payment statuses
@@ -21,5 +21,5 @@ To check the status of a payment, you can:
 | Failed                | The payment has failed and cannot be completed.                                    |
 
 <Tip>
-You can filter payments by status when exporting data through Rocka API. For more details, see [Export payments](https://docs.noda.live/reference/export-payments#/).
+You can filter payments by status when exporting data through Rocka API. For more details, see [Export payments](https://docs.rocka.live/reference/export-payments#/).
 </Tip>
