--- a/open-banking/create-instant-payment-links.mdx
+++ b/open-banking/create-instant-payment-links.mdx
@@ -69,13 +69,7 @@ For more details, see [Retrieve a payment](https://docs.rocka.live/reference/ret
 
 ## Create a payment link in your Rocka Hub
 
-1. In your <Anchor label="Rocka Hub" target="_blank" href="https://hub.rocka.live">Rocka Hub</Anchor>, click <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="20" height="20" viewBox="0 0 32 32">
-   <path d="M15.369 5.2c2.909-2.916 7.604-3.443 10.847-0.907 3.884 3.037 4.139 8.697 0.764 12.080l-1.897 1.9c-0.524 0.525-1.372 0.525-1.896 0-0.524-0.524-0.524-1.376 0-1.9l1.896-1.901c2.207-2.209 2.087-5.883-0.363-7.933-2.169-1.817-5.425-1.471-7.424 0.532l-1.697 1.7c-0.523 0.525-1.373 0.525-1.896 0-0.524-0.524-0.529-1.371 0.236-2.137l1.431-1.433zM17.724 12.391l-5.333 5.333c-0.521 0.521-0.521 1.364 0 1.885 0.26 0.26 0.601 0.391 0.943 0.391s0.683-0.131 0.943-0.391l5.333-5.333c0.521-0.521 0.521-1.364 0-1.885s-1.364-0.521-1.885 0zM16.374 23.195l-1.699 1.695c-2.001 1.996-5.264 2.34-7.435 0.531-2.452-2.043-2.573-5.704-0.364-7.908l1.9-1.893c0.524-0.523 0.524-1.371 0-1.895-0.524-0.521-1.375-0.521-1.9 0l-1.7 1.697c-2.896 2.888-3.404 7.533-0.9 10.765 3.028 3.911 8.708 4.175 12.097 0.796l1.9-1.893c0.524-0.524 0.524-1.371 0-1.895-0.525-0.524-1.375-0.524-1.9 0z"><script xmlns="" /></path></svg> **Payment Links** on the navigation sidebar.
-2. Click the <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="20" height="20" viewBox="0 0 32 32">
-   <path d="M25.333 14.667h-8v-8c0-0.737-0.597-1.333-1.333-1.333s-1.333 0.596-1.333 1.333v8h-8c-0.736 0-1.333 0.596-1.333 1.333s0.597 1.333 1.333 1.333h8v8c0 0.737 0.597 1.333 1.333 1.333s1.333-0.596 1.333-1.333v-8h8c0.736 0 1.333-0.596 1.333-1.333s-0.597-1.333-1.333-1.333z"><script xmlns="" /></path></svg> **Create link & QR Code** button in the top-right corner.
+1. In your Rocka Hub, click **Payment Links** on the navigation sidebar.
+2. Click the **Create link & QR Code** button in the top-right corner.
 3. Add a name for your payment link, choose a currency, enter the payment amount and add a description. The name will only be visible to you, but your customer will see the description on the payment form.
-
-   <Image align="left" width="300px" src="https://files.readme.io/da91e1552cc1a3454119dc035069979b836f82f187c3d2a9609629e9adb8814e-image.png" />
 4. Click **Generate**.
-
-<br />
