Add WooCommerce plugin card with image

--- a/plugins/about-plugins.mdx
+++ b/plugins/about-plugins.mdx
@@ -7,19 +7,19 @@ To make your integration easier, Rocka offers custom plugins for several ecommer
 Select your platform:
 
 <Columns cols={2}>
-  <Card title="WooCommerce" icon="sparkles">
+  <Card href="/plugins/woocommerce" img="/images/woocommerce.png" cta="Get the plugin" title="WooCommerce">
+    Our plugin for WooCommerce
+  </Card>
+  <Card icon="sparkles" title="OpenCart">
     .
   </Card>
-  <Card title="OpenCart" icon="sparkles">
+  <Card icon="sparkles" title="Magento">
     .
   </Card>
-  <Card title="Magento" icon="sparkles">
+  <Card icon="sparkles" title="PrestaShop">
     .
   </Card>
-  <Card title="PrestaShop" icon="sparkles">
-    .
-  </Card>
-  <Card title="BigCommerce" icon="sparkles">
+  <Card icon="sparkles" title="BigCommerce">
     .
   </Card>
 </Columns>
