--- a/plugins/about-plugins.mdx
+++ b/plugins/about-plugins.mdx
@@ -10,8 +10,8 @@ Select your platform:
   <Card href="/plugins/woocommerce" img="/images/woocommerce.png" cta="Get the plugin" title="WooCommerce">
     Our plugin for WooCommerce
   </Card>
-  <Card icon="sparkles" title="OpenCart">
-    .
+  <Card href="/plugins/opencart" img="/images/opencart.png" cta="Get the plugin" title="OpenCart">
+    Our plugin for OpenCart
   </Card>
   <Card icon="sparkles" title="Magento">
     .
