Update OpenCart plugin image in about-plugins.mdx

--- a/plugins/about-plugins.mdx
+++ b/plugins/about-plugins.mdx
@@ -10,7 +10,7 @@ Select your platform:
   <Card href="/plugins/woocommerce" img="/images/woocommerce.png" cta="Get the plugin" title="WooCommerce">
     Our plugin for WooCommerce
   </Card>
-  <Card href="/plugins/opencart" img="/images/opencart-new.png" cta="Get the plugin" title="OpenCart">
+  <Card href="/plugins/opencart" img="/images/opencart.png" cta="Get the plugin" title="OpenCart">
     Our plugin for OpenCart
   </Card>
   <Card icon="sparkles" title="Magento">
