--- a/plugins/about-plugins.mdx
+++ b/plugins/about-plugins.mdx
@@ -6,11 +6,11 @@ To make your integration easier, Rocka offers custom plugins for several ecommer
 
 Select your platform:
 
-<Columns cols={2}>
-  <Card href="/plugins/woocommerce" img="/images/woocommerce.png" cta="Get the plugin" title="WooCommerce">
+<Columns cols={3}>
+  <Card horizontal href="/plugins/woocommerce" img="/images/woocommerce.png" cta="Get the plugin" title="WooCommerce">
     Our plugin for WooCommerce
   </Card>
-  <Card href="/plugins/opencart" img="/images/opencart.png" cta="Get the plugin" title="OpenCart">
+  <Card horizontal href="/plugins/opencart" img="/images/opencart-logo.png" cta="Get the plugin" title="OpenCart">
     Our plugin for OpenCart
   </Card>
   <Card icon="sparkles" title="Magento">
