--- a/card-payments/test-card-numbers.mdx
+++ b/card-payments/test-card-numbers.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Test card numbers'
+title: "Test card numbers"
 ---
 
 To make sure your payment link integration works as expected, use test card data below. This way, you can simulate successful payments without having to use real money.
@@ -22,7 +22,7 @@ The credit card details below are fake and intended for test purposes only. You 
 
 ## How to use test cards
 
-1. Log in to your Rocka Hub.
+1. Log in to your [Rocka Hub](https://hub.rocka.live).
 2. On the left sidebar, click **Payment Links**.
 3. Click **Generate a test card link** in the heading section.
 4. Use the test credit card details from the table above to test your payment link in sandbox mode.
