Refine testing steps in getting started guide

--- a/getting-started/test-your-integration.mdx
+++ b/getting-started/test-your-integration.mdx
@@ -7,11 +7,11 @@ Before you start accepting payments, test your Rocka integration to make sure ev
 ## Test your integration
 
 <Steps>
-  <Step title="Step 1">
+  <Step title="Make a test API call">
     1. Go to your [Rocka Hub](https://hub.rocka.live/integration) \> **Integration**. You'll find your test API key under **Test credentials**.
     2. To verify your site is connected to Rocka, make a test API call with your sandbox key. For example, you can try the Get the list of top banks endpoint. Make sure you select **Sandbox** in the server list.
   </Step>
-  <Step title="Step 2">
+  <Step title="Create your first payment in sandbox mode">
     Try creating your first payment with your test API key. For more details, see Create a payment. Once your test payments go through, you'll see them in the **Transactions** section in your Rocka Hub.
 
     After you complete your onboarding in Rocka Hub, your live keys will become active.
