Simplify intro for test card data

--- a/card-payments/test-card-data.mdx
+++ b/card-payments/test-card-data.mdx
@@ -10,7 +10,7 @@ To make sure your payment link integration works as expected, use test card data
 
 ## Test cards by country
 
-The credit card details below are fake and intended for test purposes only. You can simulate payments for specific card brands and countries.
+The credit card details below are fake and intended for test purposes only.
 
 | Brand              | Number           | CVC | Expiry date |
 | :----------------- | :--------------- | :-- | :---------- |
