Add user object to card payments API reference

--- a/api-reference/card-payments.mdx
+++ b/api-reference/card-payments.mdx
@@ -292,6 +292,18 @@ To create a test checkout form payment, run this request with `"cardFormType": "
   </Expandable>
 </ParamField>
 
+<ParamField name="user" type="User Object">
+  <Expandable title="properties">
+    <ResponseField name="full_name" type="string">
+      The full name of the user
+    </ResponseField>
+
+    <ResponseField name="is_over_21" type="boolean">
+      Whether the user is over 21 years old
+    </ResponseField>
+  </Expandable>
+</ParamField>
+
 ## Response parameters
 
 <ResponseField name="response" type="string" required>
